tests/07-invalid-attr-value-type.stderr
error: expected `def = "..."`
 --> $DIR/07-invalid-attr-value-type.rs:5:7
  |
5 |     #[def = 10]
  |       ^^^^^^^^
